--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/npm": "^7.1.3",
+    "@semantic-release/release-notes-generator": "^9.0.3",
     "@types/express": "^4.17.12",
+    "eslint": "^7.29.0",
+    "semantic-release": "^17.4.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.4"
   },
