--- a/.releaserc
+++ b/.releaserc
@@ -1,12 +1,12 @@
-"release": {
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      ["@semantic-release/npm",{"npmPublish":false}],
-      "@semantic-release/changelog",
-      "@semantic-release/git"
-    ],
-  "branch": ["master", "next"],
+{
+  "plugins": [
+   "@semantic-release/commit-analyzer",
+   "@semantic-release/release-notes-generator",
+   ["@semantic-release/npm",{"npmPublish":false}],
+   "@semantic-release/changelog",
+   "@semantic-release/git"
+   ],
+  "branches": ["master"],
   "type": "git",
   "url": "git@github.com:Priscilt1/label01.git"
-  }
+}
